--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@inertiajs/progress": "^0.1.2",
         "aos": "^2.3.4",
         "bootstrap": "^5.3.7",
-        "swiper": "^11.2.10"
+        "swiper": "^11.2.10",
+        "toastr": "^2.1.4"
     }
 }
